// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Using lucide icon components > should adjust the size, stroke color and stroke width 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="48"
     height="48"
     viewbox="0 0 24 24"
     fill="none"
     stroke="red"
     stroke-width="4"
     stroke-linecap="round"
     stroke-linejoin="round"
     class="lucide lucide-grid3x3 lucide-grid-3x3"
>
  <rect width="18"
        height="18"
        x="3"
        y="3"
        rx="2"
  >
  </rect>
  <path d="M3 9h18">
  </path>
  <path d="M3 15h18">
  </path>
  <path d="M9 3v18">
  </path>
  <path d="M15 3v18">
  </path>
</svg>
`;

exports[`Using lucide icon components > should not scale the strokeWidth when absoluteStrokeWidth is set 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="48"
     height="48"
     viewbox="0 0 24 24"
     fill="none"
     stroke="red"
     stroke-width="1"
     stroke-linecap="round"
     stroke-linejoin="round"
     class="lucide lucide-grid3x3 lucide-grid-3x3"
>
  <rect width="18"
        height="18"
        x="3"
        y="3"
        rx="2"
  >
  </rect>
  <path d="M3 9h18">
  </path>
  <path d="M3 15h18">
  </path>
  <path d="M9 3v18">
  </path>
  <path d="M15 3v18">
  </path>
</svg>
`;

exports[`Using lucide icon components > should render an component 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="24"
     height="24"
     viewbox="0 0 24 24"
     fill="none"
     stroke="currentColor"
     stroke-width="2"
     stroke-linecap="round"
     stroke-linejoin="round"
     class="lucide lucide-grid3x3 lucide-grid-3x3"
>
  <rect width="18"
        height="18"
        x="3"
        y="3"
        rx="2"
  >
  </rect>
  <path d="M3 9h18">
  </path>
  <path d="M3 15h18">
  </path>
  <path d="M9 3v18">
  </path>
  <path d="M15 3v18">
  </path>
</svg>
`;
